Fixed AchievementMapper bug